--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cat energy. Каталог продукции.</title>
+  <link href="css/style.min.css" rel="preload" as="style">
   <link href="css/normalize.min.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
   <!-- Pixel Glass -->
