--- a/source/index.html
+++ b/source/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cat energy. Функционаьлное питание для котов.</title>
+  <link href="css/style.min.css" rel="preload" as="style">
   <link href="css/normalize.min.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
   <!-- Pixel Glass -->
-  <style>
+<!--   <style>
     HTML {
       background-repeat: no-repeat;
       background-position: 50% 0;
@@ -30,7 +31,7 @@
     }
   </style>
   <link href="pixel-glass/styles.css" rel="stylesheet">
-  <script src="pixel-glass/script.js"></script>
+  <script src="pixel-glass/script.js"></script> -->
   <!-- // Pixel Glass -->
   <script>
     // Picture element HTML5 shiv
