--- a/source/form.html
+++ b/source/form.html
@@ -5,9 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cat energy. Подбор программы</title>
   <link href="css/style.min.css" rel="preload" as="style">
+  <link href="fonts/oswaldmedium.woff2" rel="preload" as="font">
+  <link href="fonts/oswaldmedium.woff" rel="preload" as="font">
+  <link href="fonts/oswaldregular.woff2" rel="preload" as="font">
+  <link href="fonts/oswaldregular.woff" rel="preload" as="font">
   <link href="css/normalize.min.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
-    <!-- Pixel Glass -->
+  <!-- Pixel Glass -->
   <style>
     HTML {
       background-repeat: no-repeat;
@@ -34,7 +38,7 @@
   <script src="pixel-glass/script.js"></script>
   <!-- // Pixel Glass -->
   <script>
-  <script>
+    <script>
     // Picture element HTML5 shiv
     document.createElement( "picture" );
   </script>
