заменил fieldset на h2, для корректного отображения зеленых линий

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,6 +12,7 @@
     document.createElement( "picture" );
   </script>
   <script src="js/picturefill.min.js" async></script>
+  <script defer src="js/svgxuse.min.js"></script>
   <script src="js/script.js" async></script>
 </head>
 <body class="site-grid site-grid__wrapper">
