--- a/source/form.html
+++ b/source/form.html
@@ -12,6 +12,7 @@
     document.createElement( "picture" );
   </script>
   <script src="js/picturefill.min.js" async></script>
+  <script defer src="js/svgxuse.min.js"></script>
   <script src="js/script.js" async></script>
 </head>
 <body class="site-grid site-grid__wrapper">
@@ -42,7 +43,7 @@
       <p class="program-form__description page-main__wrapper">Заполните анкету и мы подберем программу&nbsp;питания для вашего кота</p>
       <div class="program-form__container">
         <fieldset class="program-form__item program-form__item--border program-form__about-cat about-cat">
-          <legend class="about-cat__title program-form__item-title visually-hidden">Данные о Вашем коте</legend>
+          <h2 class="about-cat__title program-form__item-title visually-hidden">Данные о Вашем коте</h2>
           <div class="page-main__wrapper page-main__wrapper--width-reduce">
             <div class="about-cat__inner">
               <div class="about-cat__wrapper">
@@ -63,7 +64,7 @@
           </div>
         </fieldset>
         <fieldset class="program-form__item program-form__item--border program-form__purpose purpose">
-          <legend class="purpose__title program-form__item-title visually-hidden">Цель</legend>
+          <h2 class="purpose__title program-form__item-title visually-hidden">Цель</h2>
           <div class="page-main__wrapper page-main__wrapper--width-reduce">
             <div class="purpose__inner">
               <div class="purpose__wrapper">
@@ -82,7 +83,7 @@
       </div>
 
       <fieldset class="program-form__item program-form__contacts client-contacts">
-        <legend class="client-contacts__title program-form__item-title"><span>Контактные данные (владельца кота)</span></legend>
+        <h2 class="client-contacts__title program-form__item-title"><span>Контактные данные (владельца кота)</span></h2>
         <div class="page-main__wrapper">
           <div class="client-contacts__inner">
             <div class="client-contacts__wrapper client-contacts__wrapper--mail client-contacts__wrapper--no-margin">
@@ -120,7 +121,7 @@
       </fieldset>
 
       <fieldset class="program-form__item program-form__optionally optionally">
-        <legend class="optionally__title program-form__item-title"><span>Дополнительно</span></legend>
+        <h2 class="optionally__title program-form__item-title"><span>Дополнительно</span></h2>
         <div class="page-main__wrapper">
           <div class="optionally__inner">
             <div class="optionally__wrapper">
