--- a/source/catalog.html
+++ b/source/catalog.html
@@ -2,18 +2,15 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Каталог магазина Cat Energy">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cat energy. Каталог продукции.</title>
-  <link href="css/style.min.css" rel="preload" as="style">
+  <link href="fonts/oswaldmedium.woff2" rel="preload" as="font">
+  <link href="fonts/oswaldmedium.woff" rel="preload" as="font">
+  <link href="fonts/oswaldregular.woff2" rel="preload" as="font">
+  <link href="fonts/oswaldregular.woff" rel="preload" as="font">
   <link href="css/normalize.min.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
-  <script>
-    // Picture element HTML5 shiv
-    document.createElement( "picture" );
-  </script>
-  <script src="js/picturefill.min.js" async></script>
-  <script defer src="js/svgxuse.min.js"></script>
-  <script src="js/script.js" async></script>
 </head>
 <body class="site-grid site-grid__wrapper">
   <header class="page-header page-header--no-promo page-header__container site-grid__wrapper">
@@ -572,5 +569,8 @@
       </div>
     </div>
   </footer>
+  <script src="js/picturefill.min.js" async></script>
+  <script src="js/svgxuse.min.js" defer></script>
+  <script src="js/script.min.js" async></script>
 </body>
 </html>
