--- a/source/form.html
+++ b/source/form.html
@@ -2,18 +2,15 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Страница подбора программы для вашего кота в магазине Cat Energy">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cat energy. Подбор программы</title>
-  <link href="css/style.min.css" rel="preload" as="style">
+  <link href="fonts/oswaldmedium.woff2" rel="preload" as="font">
+  <link href="fonts/oswaldmedium.woff" rel="preload" as="font">
+  <link href="fonts/oswaldregular.woff2" rel="preload" as="font">
+  <link href="fonts/oswaldregular.woff" rel="preload" as="font">
   <link href="css/normalize.min.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
-  <script>
-    // Picture element HTML5 shiv
-    document.createElement( "picture" );
-  </script>
-  <script src="js/picturefill.min.js" async></script>
-  <script defer src="js/svgxuse.min.js"></script>
-  <script src="js/script.js" async></script>
 </head>
 <body class="site-grid site-grid__wrapper">
   <header class="page-header page-header--no-promo page-header__container site-grid__wrapper">
@@ -48,17 +45,17 @@
             <div class="about-cat__inner">
               <div class="about-cat__wrapper">
                 <label class="program-form__label about-cat__label about-cat__label-name" for="about-cat__name">Имя:*</label>
-                <input class="about-cat__input about-cat__input-name program-form__input" id="about-cat__name" type="text" name="name" placeholder="БАРСИК" required>
+                <input class="about-cat__input about-cat__input-name program-form__input" id="about-cat__name" type="text" name="name" placeholder="БАРСИК" aria-label="Введите имя вашего кота" required>
               </div>
 
               <div class="about-cat__wrapper">
                 <label class="program-form__label about-cat__label about-cat__label-weight" for="about-cat__weight">Вес (кг):*</label>
-                <input class="about-cat__input about-cat__input-weight program-form__input" id="about-cat__weight" type="text" name="weight" placeholder="7" required>
+                <input class="about-cat__input about-cat__input-weight program-form__input" id="about-cat__weight" type="text" name="weight" placeholder="7" aria-label="Введите вес вашего кота в килограммах" required>
               </div>
 
               <div class="about-cat__wrapper">
                 <label class="program-form__label about-cat__label about-cat__label-age" for="about-cat__age">Возраст (лет):</label>
-                <input class="about-cat__input about-cat__input-age program-form__input" id="about-cat__age" type="number" name="age" placeholder="7">
+                <input class="about-cat__input about-cat__input-age program-form__input" id="about-cat__age" type="number" name="age" placeholder="7" aria-label="Введите возраст вашего кота">
               </div>
             </div>
           </div>
@@ -68,13 +65,13 @@
           <div class="page-main__wrapper page-main__wrapper--width-reduce">
             <div class="purpose__inner">
               <div class="purpose__wrapper">
-                <input class="purpose__radio program-form__radio-input visually-hidden" id="purpose__slim" type="radio" name="purpose-radio" value="slim">
+                <input class="purpose__radio program-form__radio-input visually-hidden" id="purpose__slim" type="radio" name="purpose-radio" value="slim" aria-label="Ваша цель - похудение кота">
                 <label class="program-form__label purpose__radio-label program-form__radio-btn" for="purpose__slim">Похудение</label>
 
-                <input class="purpose__radio program-form__radio-input visually-hidden" id="purpose__muscle" type="radio" name="purpose-radio" value="muscle">
+                <input class="purpose__radio program-form__radio-input visually-hidden" id="purpose__muscle" type="radio" name="purpose-radio" value="muscle" aria-label="Ваша цель - набор массы кота">
                 <label class="program-form__label purpose__radio-label program-form__radio-btn" for="purpose__muscle">Набор массы</label>
 
-                <input class="purpose__radio program-form__radio-input visually-hidden" id="purpose__advice" type="radio" name="purpose-radio" value="advice">
+                <input class="purpose__radio program-form__radio-input visually-hidden" id="purpose__advice" type="radio" name="purpose-radio" value="advice" aria-label="Вам нужен наш совет">
                 <label class="program-form__label purpose__radio-label program-form__radio-btn" for="purpose__advice">Не знаю (Нужен ваш совет)</label>
               </div>
             </div>
@@ -88,7 +85,7 @@
           <div class="client-contacts__inner">
             <div class="client-contacts__wrapper client-contacts__wrapper--mail client-contacts__wrapper--no-margin">
               <label class="program-form__label client-contacts__label client-contacts__label--email-margin" for="input__email">E-mail:*</label>
-              <input class="client-contacts__input client-contacts__input-email program-form__input" id="input__email" type="email" name="client-name" placeholder="KUKLACHEV@GMAIL.COM" required>
+              <input class="client-contacts__input client-contacts__input-email program-form__input" id="input__email" type="email" name="client-name" placeholder="KUKLACHEV@GMAIL.COM" aria-label="Введите ваш email" required>
               <svg class="client-contacts__email-icon" width="17" height="13" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"  x="0px" y="0px" viewBox="0 -7 17 13" style="enable-background:new 0 0 17 13;" xml:space="preserve">
                 <path class="client-contacts__email-icon program-form__input-icon" fill="#222222" d="M15.6,11.6H1.4V5.8H0V13h17V5.8h-1.4V11.6z M0,0v2.3l8.5,7.1L17,2.3V0H0z M15.6,1.6L8.5,7.5L1.4,1.6V1.4h14.2L15.6,1.6z"/>
               </svg>
@@ -96,7 +93,7 @@
 
             <div class="client-contacts__wrapper client-contacts__wrapper--phone">
               <label class="program-form__label client-contacts__label client-contacts__label--phone-margin" for="input__phone">Телефон:*</label>
-              <input class="client-contacts__input client-contacts__input-phone program-form__input" id="input__phone" type="tel" name="phone" placeholder="8 (960) 900-60-90" required>
+              <input class="client-contacts__input client-contacts__input-phone program-form__input" id="input__phone" type="tel" name="phone" placeholder="8 (960) 900-60-90" required aria-label="Введите номер вашего телефона">
               <svg class="client-contacts__phone-icon" width="20" height="20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;" xml:space="preserve">
                 <path class="program-form__input-icon" fill="#222222" d="M17.9,9.4H9.4v1.2h8.5l-2.1,2.1l0.9,0.9l3.1-3.1c0.2-0.2,0.2-0.6,0-0.9l-3.1-3.1l-0.9,0.9L17.9,9.4z"/>
                 <path class="program-form__input-icon" fill="#222222"
@@ -115,7 +112,7 @@
         <div class="page-main__wrapper">
           <label class="comment__title program-form__item-title" for="user-comment">Комментарий</label>
           <div class="comment__inner">
-            <textarea class="comment__text program-form__input" id="user-comment" rows="6" cols="32" placeholder="РАССКАЖИТЕ ОБО ВСЕХ ПОВАДКАХ КОТА"></textarea>
+            <textarea class="comment__text program-form__input" id="user-comment" rows="6" cols="32" placeholder="РАССКАЖИТЕ ОБО ВСЕХ ПОВАДКАХ КОТА" aria-label="Введите ваш комментарий"></textarea>
           </div>
         </div>
       </fieldset>
@@ -125,22 +122,22 @@
         <div class="page-main__wrapper">
           <div class="optionally__inner">
             <div class="optionally__wrapper">
-              <input class="optionally__checkbox program-form__checkbox-input visually-hidden" id="sugar-substitute" type="checkbox" name="sugar-substitute">
+              <input class="optionally__checkbox program-form__checkbox-input visually-hidden" id="sugar-substitute" type="checkbox" name="sugar-substitute" aria-label="Дополнительная опция - сахарозаменитель">
               <label class="program-form__label optionally__checkbox-label program-form__checkbox-btn" for="sugar-substitute" >Сахарозаменитель</label>
             </div>
 
             <div class="optionally__wrapper">
-              <input class="optionally__checkbox program-form__checkbox-input visually-hidden" id="water" type="checkbox" name="water" checked>
+              <input class="optionally__checkbox program-form__checkbox-input visually-hidden" id="water" type="checkbox" name="water" checked aria-label="Дополнительная опция - питьевая вода">
               <label class="program-form__label optionally__checkbox-label program-form__checkbox-btn" for="water" >Питьевая вода</label>
             </div>
 
             <div class="optionally__wrapper">
-              <input class="optionally__checkbox program-form__checkbox-input visually-hidden" id="milk" type="checkbox" name="milk">
+              <input class="optionally__checkbox program-form__checkbox-input visually-hidden" id="milk" type="checkbox" name="milk" aria-label="Дополнительная опция - молоко">
               <label class="program-form__label optionally__checkbox-label program-form__checkbox-btn" for="milk" >Молоко</label>
             </div>
 
             <div class="optionally__wrapper">
-              <input class="optionally__checkbox program-form__checkbox-input visually-hidden" id="vitamins" type="checkbox" name="sugar-substitute">
+              <input class="optionally__checkbox program-form__checkbox-input visually-hidden" id="vitamins" type="checkbox" name="sugar-substitute" aria-label="Дополнительная опция - витамины">
               <label class="program-form__label optionally__checkbox-label program-form__checkbox-btn" for="vitamins" >Витамины</label>
             </div>
           </div>
@@ -202,5 +199,8 @@
       </div>
     </div>
   </footer>
+  <script src="js/picturefill.min.js" async></script>
+  <script src="js/svgxuse.min.js" defer></script>
+  <script src="js/script.min.js" async></script>
 </body>
 </html>
