--- a/source/index.html
+++ b/source/index.html
@@ -2,19 +2,15 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Главная страница магазина Cat Energy">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cat energy. Функционаьлное питание для котов.</title>
-  <link href="css/style.min.css" rel="preload" as="style">
+  <link href="fonts/oswaldmedium.woff2" rel="preload" as="font">
+  <link href="fonts/oswaldmedium.woff" rel="preload" as="font">
+  <link href="fonts/oswaldregular.woff2" rel="preload" as="font">
+  <link href="fonts/oswaldregular.woff" rel="preload" as="font">
   <link href="css/normalize.min.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
-  <script>
-    // Picture element HTML5 shiv
-    document.createElement( "picture" );
-  </script>
-  <script src="js/picturefill.min.js" async></script>
-  <script src="js/objectFitPolyfill.min.js" async></script>
-  <script defer src="js/svgxuse.min.js"></script>
-  <script src="js/script.js" async></script>
 </head>
 <body class="site-grid">
   <div class="site-grid__wrapper site-grid__wrapper--background-header">
@@ -186,7 +182,7 @@
                 <div class="slider__buttons">
                   <button class="slider__button slider__button--current">Было</button>
                   <div class="slider__toggle">
-                    <button class="slider__toggle-item"></button>
+                    <button class="slider__toggle-item" aria-label="Кнопка переключения слайдов"></button>
                   </div>
                   <button class="slider__button">Стало</button>
                 </div>
@@ -246,5 +242,9 @@
     </div>
   </footer>
   <script src="js/objectFitPolyfill.min.js" async></script>
+  <script src="js/picturefill.min.js" async></script>
+  <script src="js/objectFitPolyfill.min.js" async></script>
+  <script src="js/svgxuse.min.js" defer></script>
+  <script src="js/script.min.js" async></script>
 </body>
 </html>
