--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,13 +11,39 @@
   <link href="fonts/oswaldregular.woff" rel="preload" as="font">
   <link href="css/normalize.min.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
+  <!-- Pixel Glass -->
+  <style>
+    HTML {
+      background-repeat: no-repeat;
+      background-position:  50% 0;
+      /* Mobile layout by default */
+      background-image: url( "img/320.jpg" );
+    }
+    /* Tablet */
+    @media ( min-width: 760px ) {
+      HTML {
+        /* Tablet layout */
+        background-image: url( "img/pixelGlass/cat-energy-index-desktop.png" );
+      }
+    }
+    /* Desktop */
+    @media ( min-width: 1300px ) {
+      HTML {
+        /* Desktop layout */
+        background-image: url("img/pixelGlass/cat-energy-catalog-desktop.jpg" );
+      }
+    }
+  </style>
+  <link href="pixel-glass/styles.css" rel="stylesheet">
+  <script src="pixel-glass/script.js"></script>
+  <!-- // Pixel Glass -->
 </head>
 <body class="site-grid site-grid__wrapper">
   <header class="page-header page-header--no-promo page-header__container site-grid__wrapper">
     <div class="page-header__wrapper">
       <a class="page-header__logo-link" href="index.html">
         <picture>
-          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg"/>
+          <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg"/>
           <source media="(min-width: 768px)" srcset="img/logo-tablet.svg"/>
           <img class="page-header__logo-image"  src="img/logo-mobile.svg" width="191" height="38" alt="Перейти на главную страницу">
         </picture>
@@ -42,7 +68,7 @@
               <div class="product__image-container">
                 <a href="#">
                   <picture>
-                    <source type="image/webp" media="(min-width: 1440px)"
+                    <source type="image/webp" media="(min-width: 1300px)"
                     srcset="img/chicken-small-desktop@1x.webp 1x,
                     img/chicken-small-desktop@2x.webp 2x"/>
 
@@ -54,7 +80,7 @@
                     srcset="img/chicken-small-mobile@1x.webp 1x,
                     img/chicken-small-mobile@2x.webp 2x"/>
 
-                    <source media="(min-width: 1440px)"
+                    <source media="(min-width: 1300px)"
                     srcset="img/chicken-small-desktop@1x.png 1x,
                     img/chicken-small-desktop@2x.png 2x"/>
 
@@ -97,7 +123,7 @@
               <div class="product__image-container">
                 <a href="#">
                   <picture>
-                    <source type="image/webp" media="(min-width: 1440px)"
+                    <source type="image/webp" media="(min-width: 1300px)"
                     srcset="img/chicken-big-desktop@1x.webp 1x,
                     img/chicken-big-desktop@2x.webp 2x"/>
 
@@ -109,7 +135,7 @@
                     srcset="img/chicken-big-mobile@1x.webp 1x,
                     img/chicken-big-mobile@2x.webp 2x"/>
 
-                    <source media="(min-width: 1440px)"
+                    <source media="(min-width: 1300px)"
                     srcset="img/chicken-big-desktop@1x.png 1x,
                     img/chicken-big-desktop@2x.png 2x"/>
 
@@ -152,7 +178,7 @@
               <div class="product__image-container">
                 <a href="#">
                   <picture>
-                    <source type="image/webp" media="(min-width: 1440px)"
+                    <source type="image/webp" media="(min-width: 1300px)"
                     srcset="img/fish-small-desktop@1x.webp 1x,
                     img/fish-small-desktop@2x.webp 2x"/>
 
@@ -164,7 +190,7 @@
                     srcset="img/fish-small-mobile@1x.webp 1x,
                     img/fish-small-mobile@2x.webp 2x"/>
 
-                    <source media="(min-width: 1440px)"
+                    <source media="(min-width: 1300px)"
                     srcset="img/fish-small-desktop@1x.png 1x,
                     img/fish-small-desktop@2x.png 2x"/>
 
@@ -207,7 +233,7 @@
               <div class="product__image-container">
                 <a href="#">
                   <picture>
-                    <source type="image/webp" media="(min-width: 1440px)"
+                    <source type="image/webp" media="(min-width: 1300px)"
                     srcset="img/fish-big-desktop@1x.webp 1x,
                     img/fish-big-desktop@2x.webp 2x"/>
 
@@ -219,7 +245,7 @@
                     srcset="img/fish-big-mobile@1x.webp 1x,
                     img/fish-big-mobile@2x.webp 2x"/>
 
-                    <source media="(min-width: 1440px)"
+                    <source media="(min-width: 1300px)"
                     srcset="img/fish-big-desktop@1x.png 1x,
                     img/fish-big-desktop@2x.png 2x"/>
 
@@ -262,7 +288,7 @@
               <div class="product__image-container">
                 <a href="#">
                   <picture>
-                    <source type="image/webp" media="(min-width: 1440px)"
+                    <source type="image/webp" media="(min-width: 1300px)"
                     srcset="img/buckwheat-small-desktop@1x.webp 1x,
                     img/buckwheat-small-desktop@2x.webp 2x"/>
 
@@ -274,7 +300,7 @@
                     srcset="img/buckwheat-small-mobile@1x.webp 1x,
                     img/buckwheat-small-mobile@2x.webp 2x"/>
 
-                    <source media="(min-width: 1440px)"
+                    <source media="(min-width: 1300px)"
                     srcset="img/buckwheat-small-desktop@1x.png 1x,
                     img/buckwheat-small-desktop@2x.png 2x"/>
 
@@ -317,7 +343,7 @@
               <div class="product__image-container">
                 <a href="#">
                   <picture>
-                    <source type="image/webp" media="(min-width: 1440px)"
+                    <source type="image/webp" media="(min-width: 1300px)"
                     srcset="img/buckwheat-big-desktop@1x.webp 1x,
                     img/buckwheat-big-desktop@2x.webp 2x"/>
 
@@ -329,7 +355,7 @@
                     srcset="img/buckwheat-big-mobile@1x.webp 1x,
                     img/buckwheat-big-mobile@2x.webp 2x"/>
 
-                    <source media="(min-width: 1440px)"
+                    <source media="(min-width: 1300px)"
                     srcset="img/buckwheat-big-desktop@1x.png 1x,
                     img/buckwheat-big-desktop@2x.png 2x"/>
 
@@ -372,7 +398,7 @@
               <div class="product__image-container">
                 <a href="#">
                   <picture>
-                    <source type="image/webp" media="(min-width: 1440px)"
+                    <source type="image/webp" media="(min-width: 1300px)"
                     srcset="img/rice-small-desktop@1x.webp 1x,
                     img/rice-small-desktop@2x.webp 2x"/>
 
@@ -384,7 +410,7 @@
                     srcset="img/rice-small-mobile@1x.webp 1x,
                     img/rice-small-mobile@2x.webp 2x"/>
 
-                    <source media="(min-width: 1440px)"
+                    <source media="(min-width: 1300px)"
                     srcset="img/rice-small-desktop@1x.png 1x,
                     img/rice-small-desktop@2x.png 2x"/>
 
