--- a/source/index.html
+++ b/source/index.html
@@ -11,6 +11,32 @@
   <link href="fonts/oswaldregular.woff" rel="preload" as="font">
   <link href="css/normalize.min.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
+  <!-- Pixel Glass -->
+  <style>
+    HTML {
+      background-repeat: no-repeat;
+      background-position:  50% 0;
+      /* Mobile layout by default */
+      background-image: url( "img/320.jpg" );
+    }
+    /* Tablet */
+    @media ( min-width: 768px ) {
+      HTML {
+        /* Tablet layout */
+        background-image: url( "img/pixelGlass/cat-energy-index-desktop.png" );
+      }
+    }
+    /* Desktop */
+    @media ( min-width: 1300px ) {
+      HTML {
+        /* Desktop layout */
+        background-image: url("img/pixelGlass/cat-energy-index-desktop.jpg" );
+      }
+    }
+  </style>
+  <link href="pixel-glass/styles.css" rel="stylesheet">
+  <script src="pixel-glass/script.js"></script>
+  <!-- // Pixel Glass -->
 </head>
 <body class="site-grid">
   <div class="site-grid__wrapper site-grid__wrapper--background-header">
@@ -19,7 +45,7 @@
         <div class="page-header__wrapper">
           <a class="page-header__logo-link">
             <picture>
-              <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg"/>
+              <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg"/>
               <source media="(min-width: 768px)" srcset="img/logo-tablet.svg"/>
               <img class="page-header__logo-image"  src="img/logo-mobile.svg" width="191" height="38" alt="Логотип магазина Cat energy">
             </picture>
@@ -43,7 +69,7 @@
           <h1 class="promo__title">Функциональное питание для котов</h1>
           <b class="promo__slogan">Занялся собой? Займись котом!</b>
           <picture>
-            <source type="image/webp" media="(min-width: 1440px)"
+            <source type="image/webp" media="(min-width: 1300px)"
             srcset="img/index-can-desktop@1x.webp 1x,
             img/index-can-desktop@2x.webp 2x"/>
 
@@ -55,7 +81,7 @@
             srcset="img/index-can-mobile@1x.webp 1x,
             img/index-can-mobile@2x.webp 2x"/>
 
-            <source media="(min-width: 1440px)"
+            <source media="(min-width: 1300px)"
             srcset="img/index-can-desktop@1x.png 1x,
             img/index-can-desktop@2x.png 2x"/>
 
@@ -119,7 +145,7 @@
               <div class="slider__images">
                 <div class="slider__images-container slider__images-container--current">
                   <picture>
-                    <source type="image/webp" media="(min-width: 1440px)"
+                    <source type="image/webp" media="(min-width: 1300px)"
                     srcset="img/before-desktop@1x.webp 1x,
                     img/before-desktop@2x.webp 2x"/>
 
@@ -131,7 +157,7 @@
                     srcset="img/before-mobile@1x.webp 1x,
                     img/before-mobile@2x.webp 2x"/>
 
-                    <source media="(min-width: 1440px)"
+                    <source media="(min-width: 1300px)"
                     srcset="img/before-desktop@1x.png 1x,
                     img/before-desktop@2x.png 2x"/>
 
@@ -149,7 +175,7 @@
                 </div>
                 <div class="slider__images-container">
                   <picture>
-                    <source type="image/webp" media="(min-width: 1440px)"
+                    <source type="image/webp" media="(min-width: 1300px)"
                     srcset="img/after-desktop@1x.webp 1x,
                     img/after-desktop@2x.webp 2x"/>
 
@@ -161,7 +187,7 @@
                     srcset="img/after-mobile@1x.webp 1x,
                     img/after-mobile@2x.webp 2x"/>
 
-                    <source media="(min-width: 1440px)"
+                    <source media="(min-width: 1300px)"
                     srcset="img/after-desktop@1x.png 1x,
                     img/after-desktop@2x.png 2x"/>
 
