--- a/source/form.html
+++ b/source/form.html
@@ -17,20 +17,20 @@
       background-repeat: no-repeat;
       background-position:  50% 0;
       /* Mobile layout by default */
-      background-image: url( "img/320.jpg" );
+      background-image: url("img/pixelGlass/cat-energy-form-mobile.jpg");
     }
     /* Tablet */
-    @media ( min-width: 760px ) {
+    @media ( min-width: 768px ) {
       HTML {
         /* Tablet layout */
-        background-image: url( "img/pixelGlass/cat-energy-index-desktop.png" );
+        background-image: url("img/pixelGlass/cat-energy-form-tablet.jpg");
       }
     }
     /* Desktop */
     @media ( min-width: 1300px ) {
       HTML {
         /* Desktop layout */
-        background-image: url("img/pixelGlass/cat-energy-form-desktop.jpg" );
+        background-image: url("img/pixelGlass/cat-energy-form-desktop.jpg");
       }
     }
   </style>
@@ -208,7 +208,7 @@
             </svg>
           </span>
         </a>
-        <a class="social__link" href="#" aria-label="Мы в Facebook">
+        <a class="social__link social__link--last-item" href="#" aria-label="Мы в Facebook">
           <span class="social__icon">
             <svg class="social__icon-fb" width="10" height="19">
               <use xlink:href="img/sprite.svg#icon-fb-mobile"/>
