--- a/source/index.html
+++ b/source/index.html
@@ -15,19 +15,19 @@
   <style>
     HTML {
       background-repeat: no-repeat;
-      background-position: 50% 0;
+      background-position:  50% 0;
       /* Mobile layout by default */
-      background-image: url("img/320.jpg");
+      background-image: url("img/pixelGlass/cat-energy-index-mobile.jpg");
     }
     /* Tablet */
-    @media (min-width: 768px) {
+    @media ( min-width: 768px ) {
       HTML {
         /* Tablet layout */
-        background-image: url("img/pixelGlass/cat-energy-index-desktop.png");
+        background-image: url("img/pixelGlass/cat-energy-index-tablet.jpg");
       }
     }
     /* Desktop */
-    @media (min-width: 1300px) {
+    @media ( min-width: 1300px ) {
       HTML {
         /* Desktop layout */
         background-image: url("img/pixelGlass/cat-energy-index-desktop.jpg");
@@ -120,7 +120,7 @@
           <li class="advantages-list__item advantages-list__item--first-item-bg"><span class="advantages-list__first-item-img">Функциональное питание содержит только полезные питательные вещества.</span></li>
           <li class="advantages-list__item advantages-list__item--second-item-bg"><span class="advantages-list__second-item-img">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</span></li>
           <li class="advantages-list__item advantages-list__item--third-item-bg advantages-list__item--no-margin"><span class="advantages-list__third-item-img">Замените один-два приема обычной еды на наше функциональное питание.</span></li>
-          <li class="advantages-list__item advantages-list__item--fourth-item-bg advantages-list__item--no-margin"><span class="advantages-list__fourth-item-img">Уже через месяц наслаждайтесь изменениями к лучшему вашего&nbsp;питомца!</span></li>
+          <li class="advantages-list__item advantages-list__item--fourth-item-bg advantages-list__item--no-margin advantages-list__item--last-item"><span class="advantages-list__fourth-item-img">Уже через месяц наслаждайтесь изменениями к лучшему вашего&nbsp;питомца!</span></li>
         </ul>
       </section>
     </div>
@@ -170,7 +170,7 @@
                     srcset="img/before-mobile@2x.png 2x"
                     alt="Кот до правильного питания"
                     data-object-fit="cover"
-                    data-object-position="-10px">
+                    data-object-position="-40px">
                   </picture>
                 </div>
                 <div class="slider__images-container">
@@ -250,7 +250,7 @@
             </svg>
           </span>
         </a>
-        <a class="social__link" href="#" aria-label="Мы в Facebook">
+        <a class="social__link social__link--last-item" href="#" aria-label="Мы в Facebook">
           <span class="social__icon">
             <svg class="social__icon-fb" width="10" height="19">
               <use xlink:href="img/sprite.svg#icon-fb-mobile"/>
